guifiles = [
'AddEntity.cpp',
'AddModel.cpp',
'AddRule.cpp',
'Axes.cpp',
'AxesMenu.cpp',
'AxisExplorer.cpp',
'BallAndStickOptions.cpp',
'CalculateMetadata.cpp',
'CandidateView.cpp',
'ChainAssignment.cpp',
'ChangeIconOptions.cpp',
'ChooseHeader.cpp',
'ChooseHeaderValue.cpp',
'ChooseEntity.cpp',
'ClusterPointDemo.cpp',
'ClusterView.cpp',
'ConfSpaceView.cpp',
'ColourLegend.cpp',
'ColourScheme.cpp',
'CyclicView.cpp',
'DatasetMenu.cpp',
'Display.cpp',
'DisplayOptions.cpp',
'DistanceMaker.cpp',
'EntityMenu.cpp',
'EntityFromSequence.cpp',
'ExportsCSV.cpp',
'FastaView.cpp',
'FileLine.cpp',
'FileView.cpp',
'FileNavi.cpp',
'FixIssuesView.cpp',
'GlobalOptions.cpp',
'GuiAtom.cpp',
'GuiBalls.cpp',
'GuiBond.cpp',
'GuiDensity.cpp',
'GuiHelices.cpp',
'GuiThickBond.cpp',
'GuiRepresentation.cpp',
'GuiRibbon.cpp',
'GuiRefls.cpp',
'IconLegend.cpp',
'LineSeries.cpp',
'LineSeriesOptions.cpp',
'MainMenu.cpp',
'MatrixPlot.cpp',
'MetadataView.cpp',
'ModelMenu.cpp',
'ModelMetadataView.cpp',
'PathsDetail.cpp',
'PathFinding.cpp',
'PathFinderView.cpp',
'PathMap.cpp',
'PathMap.h',
'PathPlot.cpp',
'PathPlot.h',
'PathView.cpp',
'PathsMenu.cpp',
'PointyView.cpp',
'PointyView.h',
'ProgressBar.cpp',
'ProgressView.cpp',
'ProjectMenu.cpp',
'ResolveIssues.cpp',
'RopeSpaceItem.cpp',
'RouteExplorer.cpp',
'RulesMenu.cpp',
'SandboxView.cpp',
'SearchPDB.cpp',
'SerialRefiner.cpp',
'SetupRefinement.cpp',
'SequenceView.cpp',
'SequenceLine.cpp',
'StarView.cpp',
'StarView.h',
'Toolkit.cpp',
'VagWindow.cpp',
'VaryColourOptions.cpp',
'WatchRefinement.cpp',
'../cmd/CmdWorker.cpp',
'../cmd/Dictator.cpp',

'AddEntity.h',
'AddModel.h',
'AddRule.h',
'Axes.h',
'BallAndStickOptions.h',
'CalculateMetadata.h',
'CandidateView.h',
'ChainAssignment.h',
'ChangeIconOptions.h',
'ChooseHeader.h',
'ChooseHeaderValue.h',
'ChooseEntity.h',
'ClusterPointDemo.h',
'ClusterView.h',
'ConfSpaceView.h',
'ColourLegend.h',
'ColourScheme.h',
'CyclicView.h',
'DatasetMenu.h',
'Display.h',
'DisplayOptions.h',
'DistanceMaker.h',
'EntityMenu.h',
'EntityFromSequence.h',
'FileLine.h',
'FileView.h',
'FixIssuesView.h',
'GuiAtom.h',
'GuiBond.h',
'GuiDensity.h',
'GuiHelices.h',
'GuiRepresentation.h',
'GuiThickBond.h',
'GuiRefls.h',
'IconLegend.h',
'LineSeries.h',
'LineSeriesOptions.h',
'MainMenu.h',
'MatrixPlot.h',
'MetadataView.h',
'ModelMenu.h',
'ModelMetadataView.h',
'PathFinding.h',
'PathsDetail.h',
'ProgressView.h',
'RulesMenu.h',
'SandboxView.h',
'SearchPDB.h',
'SerialRefiner.h',
'SetupRefinement.h',
'SequenceView.h',
'SequenceLine.h',
'Toolkit.h',
'VagWindow.h',
'VaryColourOptions.h',
'WatchRefinement.h',
'../cmd/CmdWorker.h',
'../cmd/Dictator.h',
]

gui = static_library('vaggui', guifiles,
	cpp_args: ['-std=c++11', compile_args],
	link_args: [links],
	dependencies : deps, 
    include_directories: ['../..', '../core'],
	link_with : [core, guielements], 
	install: false)
