guifiles = [
'AddEntity.cpp',
'AddModel.cpp',
'AddRule.cpp',
'Atom2AtomExplorer.cpp',
'Atom2AtomExplorer.h',
'Axes.cpp',
'AxesMenu.cpp',
'AxisRequests.cpp',
'AxisRequests.h',
'AxisExplorer.cpp',
'BallAndStickOptions.cpp',
'BFactors.cpp',
'BFactors.h',
'CalculateMetadata.cpp',
'CandidateView.cpp',
'ChainAssignment.cpp',
'ChangeIconOptions.cpp',
'ChooseHeader.cpp',
'ChooseHeaderValue.cpp',
'ChooseEntity.cpp',
'ClusterPointDemo.cpp',
'ClusterView.cpp',
'ColumnView.cpp',
'ColumnView.h',
'CompareEntities.cpp',
'CompareEntities.h',
'ConfSpaceView.cpp',
'ColourLegend.cpp',
'ColourScheme.cpp',
'ConformerClusters.cpp',
'ConformerClusters.h',
'CyclicView.cpp',
'DatasetMenu.cpp',
'Display.cpp',
'Display.h',
'DisplayUnit.cpp',
'DisplayUnit.h',
'DisplayOptions.cpp',
'DistanceMaker.cpp',
'EntityMenu.cpp',
'EntityFromSequence.cpp',
'ExportsCSV.cpp',
'FastaView.cpp',
'FileLine.cpp',
'FileView.cpp',
'FileNavi.cpp',
'FixIssuesView.cpp',
'GlobalOptions.cpp',
'GuiAtom.cpp',
'GuiBalls.cpp',
'GuiBond.cpp',
'GuiDensity.cpp',
'GuiHelices.cpp',
'GuiThickBond.cpp',
'GuiRepresentation.cpp',
'GuiRibbon.cpp',
'GuiRefls.cpp',
'IconLegend.cpp',
'LineSeries.cpp',
'LineSeriesOptions.cpp',
'ListInstancesView.cpp',
'ListInstancesView.h',
'LoopyDisplay.cpp',
'LoopyDisplay.h',
'MapView.cpp',
'MapView.h',
'MakeNewPaths.cpp',
'MakeNewPaths.h',
'MainMenu.cpp',
'MatrixPlot.cpp',
'MetadataView.cpp',
'ModelMenu.cpp',
'ModelMetadataView.cpp',
'ParamTweaker.cpp',
'ParamTweaker.h',
'PathsDetail.cpp',
'PathInterfaceSetupView.cpp',
'PathInterfaceSetupView.h',
'PathFinding.cpp',
'PathParamEditor.cpp',
'PathParamEditor.h',
'PathsMenu.cpp',
'PickAtomFromSequence.h',
'PickAtomFromSequence.cpp',
'PointyView.cpp',
'PointyView.h',
'ProgressBar.cpp',
'ProgressView.cpp',
'ProbeAtom.cpp',
'ProbeAtom.h',
'ProbeBond.cpp',
'ProbeBond.h',
'ProjectMenu.cpp',
'ProtonNetworkView.cpp',
'ProtonNetworkView.h',
'ResolveIssues.cpp',
'RopeSpaceItem.cpp',
'RouteExplorer.cpp',
'RulesMenu.cpp',
'SavedSpace.cpp',
'SavedSpace.h',
'SandboxView.cpp',
'SearchPDB.cpp',
'SerialRefiner.cpp',
'SetupRefinement.cpp',
'SequenceView.cpp',
'SequenceLine.cpp',
'TableView.cpp',
'TableView.h',
'TickList.cpp',
'TickList.h',
'Toolkit.cpp',
'VagWindow.cpp',
'VaryColourOptions.cpp',
'WatchRefinement.cpp',
'WholeModelPathSetupView.cpp',
'WholeModelPathSetupView.h',
'../cmd/CmdWorker.cpp',
'../cmd/Dictator.cpp',

'AddEntity.h',
'AddModel.h',
'AddRule.h',
'Axes.h',
'BallAndStickOptions.h',
'CalculateMetadata.h',
'CandidateView.h',
'ChainAssignment.h',
'ChangeIconOptions.h',
'ChooseHeader.h',
'ChooseHeaderValue.h',
'ChooseEntity.h',
'ClusterPointDemo.h',
'ClusterView.h',
'ConfSpaceView.h',
'ColourLegend.h',
'ColourScheme.h',
'CyclicView.h',
'DatasetMenu.h',
'Display.h',
'DisplayOptions.h',
'DistanceMaker.h',
'EntityMenu.h',
'EntityFromSequence.h',
'FileLine.h',
'FileView.h',
'FixIssuesView.h',
'GuiAtom.h',
'GuiBond.h',
'GuiDensity.h',
'GuiHelices.h',
'GuiRepresentation.h',
'GuiThickBond.h',
'GuiRefls.h',
'IconLegend.h',
'LineSeries.h',
'LineSeriesOptions.h',
'MainMenu.h',
'MatrixPlot.h',
'MetadataView.h',
'ModelMenu.h',
'ModelMetadataView.h',
'PathFinding.h',
'PathsDetail.h',
'ProgressView.h',
'RulesMenu.h',
'SandboxView.h',
'SearchPDB.h',
'SerialRefiner.h',
'SetupRefinement.h',
'SequenceView.h',
'SequenceLine.h',
'Toolkit.h',
'VagWindow.h',
'VaryColourOptions.h',
'WatchRefinement.h',
'../cmd/CmdWorker.h',
'../cmd/Dictator.h',
]

gui = static_library('vaggui', guifiles,
	cpp_args: ['-std=c++20', compile_args],
	link_args: [links],
	dependencies : deps, 
    include_directories: ['../..', '../core'],
	link_with : [core, guielements], 
	install: false)
