utilfiles = [
'Canonical.cpp',
'FileReader.cpp',
'SpecialTable.cpp',
'svd/svdcmp.cpp',
'svd/PCA.cpp',
'svd/matrix.cpp',
'Stepped.cpp',
'Stepped.h',
'ProbDist.cpp',
'Hypersphere.cpp',
'Mapping.h',
'Variable.h',
'maths.cpp',
'version.h',
'polyfit.h',
'Hypersphere.h',
'SpecialTable.h',
'ProbDist.h',
'histogram.h',
'histogram.cpp',
'brain/Layer.cpp',
'brain/Layer.h',
'brain/InputLayer.cpp',
'brain/InputLayer.h',
'brain/CalcLayer.cpp',
'brain/CalcLayer.h',
'brain/HiddenLayer.cpp',
'brain/HiddenLayer.h',
'brain/Function.cpp',
'brain/Function.h',
'brain/LogSigmoid.cpp',
'brain/LogSigmoid.h',
'brain/PureLinear.cpp',
'brain/PureLinear.h',
'brain/NeuralNet.cpp',
'brain/NeuralNet.h',
'brain/OutputLayer.cpp',
'brain/OutputLayer.h',
]

install_headers([
'Canonical.h',
'FileReader.h',
'glm_import.h',
'glm_json.h',
'seqalign.h',
'maths.h',
'version.h',
'svd/PCA.h',
],
subdir : 'vagabond/utils')

vagutils = static_library('vagutils', utilfiles, 
	cpp_args: ['-I/usr/local/include', '-std=c++11', compile_args],
	link_args: [links],
	dependencies : deps, install: false)

