glm = dependency('glm', required: false)
gl = dependency('GL', method : 'system', required: false)
sdl2 = dependency('SDL2', required: false)
sdl2image = dependency('SDL2_image', required: false)

if (links == [])
  deps += [gl, sdl2, sdl2image]
endif

guielementfiles = [
'AskYesNo.cpp',
'AskForText.cpp',
'BadChoice.cpp',
'Box.cpp',
'Button.cpp',
'Choice.cpp',
'ChoiceGroup.cpp',
'ChooseRange.cpp',
'Draggable.cpp',
'FloatingText.cpp',
'ForwardBackward.cpp',
'HasRenderables.cpp',
'Icosahedron.cpp',
'IndexResponseView.cpp',
'Image.cpp',
'Library.cpp',
'ListView.cpp',
'Menu.cpp',
'Modal.cpp',
'Mouse3D.cpp',
'Quad.cpp',
'Renderable.cpp',
'Scene.cpp',
'SelectionBox.cpp',
'Slider.cpp',
'SnowGL.cpp',
'Text.cpp',
'TextEntry.cpp',
'TextManager.cpp',
'Window.cpp',

'AskYesNo.h',
'AskForText.h',
'BadChoice.h',
'Box.h',
'Button.h',
'ButtonResponder.h',
'canvas.h',
'Choice.h',
'ChoiceGroup.h',
'Draggable.h',
'ForwardBackward.h',
'HasRenderables.h',
'KeyResponder.h',
'Icosahedron.h',
'Image.h',
'ImageButton.h',
'IndexResponseView.h',
'Library.h',
'ListView.h',
'Modal.h',
'Mouse3D.h',
'Renderable.h',
'Scene.h',
'Slider.h',
'SnowGL.h',
'Text.h',
'TextButton.h',
'TextEntry.h',
'TextManager.h',
'upload.h',
'Window.h',
]

#install_headers([
#'AskYesNo.h',
#'AskForText.h',
#'BadChoice.h',
#'Box.h',
#'Button.h',
#'ButtonResponder.h',
#'canvas.h',
#'Choice.h',
#'ChoiceGroup.h',
#'Draggable.h',
#'ForwardBackward.h',
#'HasRenderables.h',
#'KeyResponder.h',
#'Icosahedron.h',
#'Image.h',
#'ImageButton.h',
#'IndexResponseView.h',
#'Library.h',
#'ListView.h',
#'Modal.h',
#'Mouse3D.h',
#'Renderable.h',
#'Scene.h',
#'Slider.h',
#'SnowGL.h',
#'Text.h',
#'TextButton.h',
#'TextEntry.h',
#'TextManager.h',
#'upload.h',
#'Window.h',
#],
#subdir : 'vagabond/gui/elements')

guielements = static_library('vagguielements', guielementfiles,
	cpp_args: ['-std=c++11', compile_args],
	include_directories: ['../../..'],
	link_args: [links],
	dependencies : deps, install: false)

